scripts/nullaway/annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8.txt
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:99: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return failCause;
        ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/DynamicCaseContext.java:178: error: [NullAway] passing @Nullable parameter 'this.failCause' where @NonNull is required
            errorMessage = formatError(this.failCause);
                                           ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultDimension.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields enumClass (line 8), alias (line 10) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public DefaultDimension() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/processors/DynamicCaseProcessor.java:196: error: [NullAway] unboxing of a @Nullable value
            constraintSequence[index] = constraintDimension.value();
                               ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultPairDimension.java:19: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return oneExpression;
        ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultPairDimension.java:38: error: [NullAway] passing @Nullable parameter 'oneExpression' where @NonNull is required
        return ScriptLexicalAnalyzer.stripVariablePlaceholder(oneExpression) + "." + alias;
                                                              ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/dimensions/DefaultObjectDimension.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return oneExpression;
        ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:96: error: [NullAway] @NonNull field callback not initialized
    private ICombinationHandler callback;
                                ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:122: error: [NullAway] unboxing of a @Nullable value
                return dimensionIndex.get(o1.getDottedName()) - dimensionIndex.get(o2.getDottedName());
                                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/core/impl/explorers/ExhaustiveExploreStrategy.java:122: error: [NullAway] unboxing of a @Nullable value
                return dimensionIndex.get(o1.getDottedName()) - dimensionIndex.get(o2.getDottedName());
                                                                                  ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:22: error: [NullAway] dereferenced expression field is @Nullable
            field.setAccessible(true);
                 ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:65: error: [NullAway] dereferenced expression field is @Nullable
            if ( field.isAccessible() ) {
                      ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ClassUtils.java:99: error: [NullAway] dereferenced expression field is @Nullable
        if ( !field.isAccessible() ) {
                   ^
    (see http://t.uber.com/nullaway )
../annotator/urlac20d257ff_zhongdj_Madz_Stochastic_tgz-pJ8-net_madz_test_stochastic_core_impl_DynamicDemoJ8/src/net/madz/test/stochastic/utilities/ScriptLexicalAnalyzer.java:15: error: [NullAway] dereferenced expression with is @Nullable
        if ( with.startsWith("${") ) {
                 ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
14 errors
